--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skills Matrix</title>
 
-    <link rel="stylesheet" href="/plugins/basic-modal-3.3.8/basic-modal.min.css?$modena=skills-matrix-client-jquery" />
-    <link rel="stylesheet" href="/plugins/bootstrap-3.2.0/css/bootstrap.css?$modena=skills-matrix-client-jquery" />
-    <link rel="stylesheet" href="/plugins/font-awesome-4.4.0/css/font-awesome.css?$modena=skills-matrix-client-jquery" />
-    <link rel="stylesheet" href="/plugins/spinkit/spinkit.css?$modena=skills-matrix-client-jquery" />
-    <link rel="stylesheet" href="/plugins/toastr-2.1.3/toastr.min.css?$modena=skills-matrix-client-jquery" />
-    <link rel="stylesheet" href="/css/main.css?$modena=skills-matrix-client-jquery" />
-    <link rel="stylesheet" href="/css/dynamic-content.css?$modena=skills-matrix-client-jquery" />
+    <link rel="stylesheet" href="/plugins/basic-modal-3.3.8/basic-modal.min.css" />
+    <link rel="stylesheet" href="/plugins/bootstrap-3.2.0/css/bootstrap.css" />
+    <link rel="stylesheet" href="/plugins/font-awesome-4.4.0/css/font-awesome.css" />
+    <link rel="stylesheet" href="/plugins/spinkit/spinkit.css" />
+    <link rel="stylesheet" href="/plugins/toastr-2.1.3/toastr.min.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/dynamic-content.css" />
 
 </head>
 <body>
@@ -52,7 +52,7 @@
                     <p>
                         Suspendisse et metus ligula. Nulla laoreet imperdiet magna, quis egestas sem rhoncus vitae. In non maximus sem, eget accumsan risus. Nam porttitor lorem at purus mollis dictum. Vestibulum eleifend lorem non est consectetur, vel dignissim eros cursus. Aenean magna tortor, fringilla vitae vulputate sit amet, ornare et eros. Vestibulum eget suscipit elit
                     </p>
-                    <img src="/images/skills.png?$modena=skills-matrix-client-jquery" class="responsive-img" />
+                    <img src="/images/skills.png" class="responsive-img" />
                 </div>
             </div>
 
@@ -222,28 +222,28 @@
         </footer>
     </div>
 
-    <script type="text/javascript" src="/plugins/jquery-2.1.1/jquery-2.1.1.min.js?$modena=skills-matrix-client-jquery"></script>
-    <script type="text/javascript" src="/plugins/bootstrap-3.2.0/js/bootstrap.min.js?$modena=skills-matrix-client-jquery"></script>
-    <script type="text/javascript" src="/plugins/basic-modal-3.3.8/basic-modal.min.js?$modena=skills-matrix-client-jquery"></script>
-    <script type="text/javascript" src="/plugins/toastr-2.1.3/toastr.min.js?$modena=skills-matrix-client-jquery"></script>
-    <script type="text/javascript" src="/js/utils/loader.js?$modena=skills-matrix-client-jquery"></script>
-    <script type="text/javascript" src="/js/utils/js-commons.js?$modena=skills-matrix-client-jquery"></script>
-    <script type="text/javascript" src="/js/utils/navigation.js?$modena=skills-matrix-client-jquery"></script>
-    <script type="text/javascript" src="/js/utils/ajax.js?$modena=skills-matrix-client-jquery"></script>
-    <script type="text/javascript" src="/js/utils/paginated-list.js?$modena=skills-matrix-client-jquery"></script>
+    <script type="text/javascript" src="/plugins/jquery-2.1.1/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="/plugins/bootstrap-3.2.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/plugins/basic-modal-3.3.8/basic-modal.min.js"></script>
+    <script type="text/javascript" src="/plugins/toastr-2.1.3/toastr.min.js"></script>
+    <script type="text/javascript" src="/js/utils/loader.js"></script>
+    <script type="text/javascript" src="/js/utils/js-commons.js"></script>
+    <script type="text/javascript" src="/js/utils/navigation.js"></script>
+    <script type="text/javascript" src="/js/utils/ajax.js"></script>
+    <script type="text/javascript" src="/js/utils/paginated-list.js"></script>
 
     <!-- Home -->
-    <script src="/js/home/home.js?$modena=skills-matrix-client-jquery"></script>
+    <script src="/js/home/home.js"></script>
 
     <!-- Employees -->
-    <script src="/js/employees/list.js?$modena=skills-matrix-client-jquery"></script>
-    <script src="/js/employees/details-state.js?$modena=skills-matrix-client-jquery"></script>
-    <script src="/js/employees/details-actions.js?$modena=skills-matrix-client-jquery"></script>
+    <script src="/js/employees/list.js"></script>
+    <script src="/js/employees/details-state.js"></script>
+    <script src="/js/employees/details-actions.js"></script>
 
     <!-- Skills -->
-    <script src="/js/skills/list.js?$modena=skills-matrix-client-jquery"></script>
-    <script src="/js/skills/details-state.js?$modena=skills-matrix-client-jquery"></script>
-    <script src="/js/skills/details-actions.js?$modena=skills-matrix-client-jquery"></script>
+    <script src="/js/skills/list.js"></script>
+    <script src="/js/skills/details-state.js"></script>
+    <script src="/js/skills/details-actions.js"></script>
 
     <!-- Ready. Every state event should be started from here except from the user triggered ones -->
     <script type="text/javascript">
